--- a/styles/main.css
+++ b/styles/main.css
@@ -141,3 +141,13 @@ a[href]:hover {
 .body {
   font-size: 1rem;
 }
+footer {
+   
+  background-color:  #98c1d9;
+}
+
+footer p {
+color: whitesmoke;
+margin: 0;
+padding: 3rem 1rem 6rem;
+}
