--- a/styles/main.css
+++ b/styles/main.css
@@ -127,15 +127,24 @@ aside {
 a {
   text-decoration: none;
 }
-
-a[href]:hover {
-  background-color: var(--color-secondary);
-  color: #205373;
-}
 .button {
-  background-color: #517ea6;
-  transition: background-color 300ms ease;
+  border: 1px solid var(--color-secondary);
+  color: var(--color-secondary);
   cursor: pointer;
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  text-transform: uppercase;
+  transition: background-color 400ms ease-in-out, color 400ms ease-in-out;
+}
+
+.button:hover {
+  background-color: var(--color-secondary);
+  color: #fff;
+}
+
+/* need extra specificity to override the color set by a[href]:hover */
+a.button:hover {
+  color: #fff;
 }
 .main {
   margin: 0 auto;
